# rename-with-date

./: Cargo.toml  LICENSE  README.md
src/: main.rs
